--- a/menu.html
+++ b/menu.html
@@ -17,9 +17,8 @@
       <nav class="header-navbar">
         <a href="#" class="active">Home</a>
         <a href="#">About</a>
-        <a href="#">Services</a>
-        <a href="#">Resume</a>
-        <a href="#">Contact</a>
+        <a href="#">Project</a>
+        <a href="#">Blogs</a>
       </nav>
     </header>
 
@@ -46,5 +45,309 @@
         </div>
       </div>
     </section>
+
+    <!-- About section -->
+
+    <div class="about">
+      <img src="images/html.png" alt="about" class="about_img" />
+      <div class="about_name">
+        <h3>About</h3>
+        <span>Me</span>
+      </div>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis ut
+        asperiores commodi unde sit ducimus harum tenetur iste qui minus animi
+        aut soluta voluptate, aspernatur sed laborum quos pariatur? Eius.
+      </p>
+      <button>contact me</button>
+    </div>
+
+    <hr />
+    <br />
+
+    <!-- skills section -->
+    <div class="skill_container">
+      <h1 class="skills">My Skills</h1>
+      <div class="skill_icons">
+        <svg
+          viewBox="0 0 500 50"
+          width="500"
+          height="50"
+          style="overflow-x: hidden"
+        >
+          <path d="M10 25l20-20v15h460v10H30v15z" fill="rgb(92, 212, 252)" />
+        </svg>
+      </div>
+
+      <div class="skill_name">
+        <!-- half the skill in div -->
+        <div class="first_skill">
+          <h1>
+            CSS
+            <svg width="390" height="50">
+              <circle cx="110" cy="40" r="5" fill="rgb(92, 212, 252)" />
+              <circle cx="140" cy="40" r="5" fill="rgb(92, 212, 252)" />
+              <circle cx="170" cy="40" r="5" fill="rgb(92, 212, 252)" />
+              <circle cx="200" cy="40" r="5" fill="rgb(92, 212, 252)" />
+              <circle cx="230" cy="40" r="5" fill="rgb(92, 212, 252)" />
+              <circle cx="260" cy="40" r="5" fill="rgb(92, 212, 252)" />
+              <circle cx="290" cy="40" r="5" fill="rgb(92, 212, 252)" />
+              <circle
+                cx="320"
+                cy="40"
+                r="5"
+                fill="none"
+                stroke="rgb(92, 212, 252)"
+                stroke-width="2"
+              />
+              <circle
+                cx="350"
+                cy="40"
+                r="5"
+                fill="none"
+                stroke="rgb(92, 212, 252)"
+                stroke-width="2"
+              />
+              <circle
+                cx="380"
+                cy="40"
+                r="5"
+                fill="none"
+                stroke="rgb(92, 212, 252)"
+                stroke-width="2"
+              />
+            </svg>
+          </h1>
+
+          <h1>
+            HTML
+            <svg width="365" height="50">
+              <circle cx="85" cy="40" r="5" fill="rgb(92, 212, 252)" />
+              <circle cx="115" cy="40" r="5" fill="rgb(92, 212, 252)" />
+              <circle cx="145" cy="40" r="5" fill="rgb(92, 212, 252)" />
+              <circle cx="175" cy="40" r="5" fill="rgb(92, 212, 252)" />
+              <circle cx="205" cy="40" r="5" fill="rgb(92, 212, 252)" />
+              <circle cx="235" cy="40" r="5" fill="rgb(92, 212, 252)" />
+              <circle cx="265" cy="40" r="5" fill="rgb(92, 212, 252)" />
+              <circle
+                cx="295"
+                cy="40"
+                r="5"
+                fill="none"
+                stroke="rgb(92, 212, 252)"
+                stroke-width="2"
+              />
+              <circle
+                cx="325"
+                cy="40"
+                r="5"
+                fill="none"
+                stroke="rgb(92, 212, 252)"
+                stroke-width="2"
+              />
+              <circle
+                cx="355"
+                cy="40"
+                r="5"
+                fill="none"
+                stroke="rgb(92, 212, 252)"
+                stroke-width="2"
+              />
+            </svg>
+          </h1>
+
+          <h1>
+            JAVASCRIPT
+            <svg width="310" height="50">
+              <circle cx="25" cy="40" r="5" fill="rgb(92, 212, 252)" />
+              <circle cx="55" cy="40" r="5" fill="rgb(92, 212, 252)" />
+              <circle cx="85" cy="40" r="5" fill="rgb(92, 212, 252)" />
+              <circle cx="115" cy="40" r="5" fill="rgb(92, 212, 252)" />
+              <circle cx="145" cy="40" r="5" fill="rgb(92, 212, 252)" />
+              <circle cx="175" cy="40" r="5" fill="rgb(92, 212, 252)" />
+              <circle cx="205" cy="40" r="5" fill="rgb(92, 212, 252)" />
+              <circle
+                cx="235"
+                cy="40"
+                r="5"
+                fill="none"
+                stroke="rgb(92, 212, 252)"
+                stroke-width="2"
+              />
+              <circle
+                cx="265"
+                cy="40"
+                r="5"
+                fill="none"
+                stroke="rgb(92, 212, 252)"
+                stroke-width="2"
+              />
+              <circle
+                cx="295"
+                cy="40"
+                r="5"
+                fill="none"
+                stroke="rgb(92, 212, 252)"
+                stroke-width="2"
+              />
+            </svg>
+          </h1>
+
+          <h1>
+            BOOTSTRAP
+            <svg width="300" height="50">
+              <circle cx="20" cy="40" r="5" fill="rgb(92, 212, 252)" />
+              <circle cx="50" cy="40" r="5" fill="rgb(92, 212, 252)" />
+              <circle cx="80" cy="40" r="5" fill="rgb(92, 212, 252)" />
+              <circle cx="110" cy="40" r="5" fill="rgb(92, 212, 252)" />
+              <circle cx="140" cy="40" r="5" fill="rgb(92, 212, 252)" />
+              <circle cx="170" cy="40" r="5" fill="rgb(92, 212, 252)" />
+              <circle cx="200" cy="40" r="5" fill="rgb(92, 212, 252)" />
+              <circle
+                cx="230"
+                cy="40"
+                r="5"
+                fill="none"
+                stroke="rgb(92, 212, 252)"
+                stroke-width="2"
+              />
+              <circle
+                cx="260"
+                cy="40"
+                r="5"
+                fill="none"
+                stroke="rgb(92, 212, 252)"
+                stroke-width="2"
+              />
+              <circle
+                cx="290"
+                cy="40"
+                r="5"
+                fill="none"
+                stroke="rgb(92, 212, 252)"
+                stroke-width="2"
+              />
+            </svg>
+          </h1>
+        </div>
+
+        <!-- another half of the skill -->
+        <div class="second_skill">
+          <h1>
+            TAILWIND
+            <svg width="300" height="50">
+              <circle cx="20" cy="40" r="5" fill="rgb(92, 212, 252)" />
+              <circle cx="50" cy="40" r="5" fill="rgb(92, 212, 252)" />
+              <circle cx="80" cy="40" r="5" fill="rgb(92, 212, 252)" />
+              <circle cx="110" cy="40" r="5" fill="rgb(92, 212, 252)" />
+              <circle cx="140" cy="40" r="5" fill="rgb(92, 212, 252)" />
+              <circle cx="170" cy="40" r="5" fill="rgb(92, 212, 252)" />
+              <circle cx="200" cy="40" r="5" fill="rgb(92, 212, 252)" />
+              <circle
+                cx="230"
+                cy="40"
+                r="5"
+                fill="none"
+                stroke="rgb(92, 212, 252)"
+                stroke-width="2"
+              />
+              <circle
+                cx="260"
+                cy="40"
+                r="5"
+                fill="none"
+                stroke="rgb(92, 212, 252)"
+                stroke-width="2"
+              />
+              <circle
+                cx="290"
+                cy="40"
+                r="5"
+                fill="none"
+                stroke="rgb(92, 212, 252)"
+                stroke-width="2"
+              />
+            </svg>
+          </h1>
+
+          <h1>
+            NODEJS
+            <svg width="325" height="50">
+              <circle cx="45" cy="40" r="5" fill="rgb(92, 212, 252)" />
+              <circle cx="75" cy="40" r="5" fill="rgb(92, 212, 252)" />
+              <circle cx="105" cy="40" r="5" fill="rgb(92, 212, 252)" />
+              <circle cx="135" cy="40" r="5" fill="rgb(92, 212, 252)" />
+              <circle cx="165" cy="40" r="5" fill="rgb(92, 212, 252)" />
+              <circle cx="195" cy="40" r="5" fill="rgb(92, 212, 252)" />
+              <circle cx="225" cy="40" r="5" fill="rgb(92, 212, 252)" />
+              <circle
+                cx="255"
+                cy="40"
+                r="5"
+                fill="none"
+                stroke="rgb(92, 212, 252)"
+                stroke-width="2"
+              />
+              <circle
+                cx="285"
+                cy="40"
+                r="5"
+                fill="none"
+                stroke="rgb(92, 212, 252)"
+                stroke-width="2"
+              />
+              <circle
+                cx="315"
+                cy="40"
+                r="5"
+                fill="none"
+                stroke="rgb(92, 212, 252)"
+                stroke-width="2"
+              />
+            </svg>
+          </h1>
+
+          <h1>
+            REACTJS
+            <svg width="320" height="50">
+              <circle cx="40" cy="40" r="5" fill="rgb(92, 212, 252)" />
+              <circle cx="70" cy="40" r="5" fill="rgb(92, 212, 252)" />
+              <circle cx="100" cy="40" r="5" fill="rgb(92, 212, 252)" />
+              <circle cx="130" cy="40" r="5" fill="rgb(92, 212, 252)" />
+              <circle cx="160" cy="40" r="5" fill="rgb(92, 212, 252)" />
+              <circle cx="190" cy="40" r="5" fill="rgb(92, 212, 252)" />
+              <circle cx="220" cy="40" r="5" fill="rgb(92, 212, 252)" />
+              <circle
+                cx="250"
+                cy="40"
+                r="5"
+                fill="none"
+                stroke="rgb(92, 212, 252)"
+                stroke-width="2"
+              />
+              <circle
+                cx="280"
+                cy="40"
+                r="5"
+                fill="none"
+                stroke="rgb(92, 212, 252)"
+                stroke-width="2"
+              />
+              <circle
+                cx="310"
+                cy="40"
+                r="5"
+                fill="none"
+                stroke="rgb(92, 212, 252)"
+                stroke-width="2"
+              />
+            </svg>
+          </h1>
+        </div>
+      </div>
+    </div>
+
+    <hr />
+    <br />
   </body>
 </html>
