project section completed

--- a/menu.html
+++ b/menu.html
@@ -349,5 +349,142 @@
 
     <hr />
     <br />
+
+    <!-- Project section -->
+    <div class="project_container">
+      <h1>My projects</h1>
+
+      <div class="pro">
+        <h3 class="highlights">
+          Project <span style="color: rgb(92, 231, 255)">highlights</span>
+        </h3>
+        <h4 class="date_pro">Oct,2023</h4>
+        <img src="images/project1.png" alt="project_image" class="pro_1" />
+      </div>
+
+      <div class="dot_container">
+        <svg width="450" height="50">
+          <circle cx="110" cy="40" r="5" fill="rgb(92, 212, 252)" />
+          <circle cx="140" cy="40" r="5" fill="rgb(92, 212, 252)" />
+          <circle cx="170" cy="40" r="5" fill="rgb(92, 212, 252)" />
+          <circle cx="200" cy="40" r="5" fill="rgb(92, 212, 252)" />
+          <circle cx="230" cy="40" r="5" fill="rgb(92, 212, 252)" />
+          <circle cx="260" cy="40" r="5" fill="rgb(92, 212, 252)" />
+          <circle cx="290" cy="40" r="5" fill="rgb(92, 212, 252)" />
+          <circle cx="320" cy="40" r="5" fill="rgb(92, 212, 252)" />
+          <circle cx="350" cy="40" r="5" fill="rgb(92, 212, 252)" />
+          <circle cx="380" cy="40" r="5" fill="rgb(92, 212, 252)" />
+          <circle cx="410" cy="40" r="5" fill="rgb(92, 212, 252)" />
+          <circle cx="440" cy="40" r="5" fill="rgb(92, 212, 252)" />
+        </svg>
+        <svg width="450" height="50">
+          <circle cx="110" cy="40" r="5" fill="rgb(92, 212, 252)" />
+          <circle cx="140" cy="40" r="5" fill="rgb(92, 212, 252)" />
+          <circle cx="170" cy="40" r="5" fill="rgb(92, 212, 252)" />
+          <circle cx="200" cy="40" r="5" fill="rgb(92, 212, 252)" />
+          <circle cx="230" cy="40" r="5" fill="rgb(92, 212, 252)" />
+          <circle cx="260" cy="40" r="5" fill="rgb(92, 212, 252)" />
+          <circle cx="290" cy="40" r="5" fill="rgb(92, 212, 252)" />
+          <circle cx="320" cy="40" r="5" fill="rgb(92, 212, 252)" />
+          <circle cx="350" cy="40" r="5" fill="rgb(92, 212, 252)" />
+          <circle cx="380" cy="40" r="5" fill="rgb(92, 212, 252)" />
+          <circle cx="410" cy="40" r="5" fill="rgb(92, 212, 252)" />
+          <circle cx="440" cy="40" r="5" fill="rgb(92, 212, 252)" />
+        </svg>
+        <svg width="450" height="50">
+          <circle cx="110" cy="40" r="5" fill="rgb(92, 212, 252)" />
+          <circle cx="140" cy="40" r="5" fill="rgb(92, 212, 252)" />
+          <circle cx="170" cy="40" r="5" fill="rgb(92, 212, 252)" />
+          <circle cx="200" cy="40" r="5" fill="rgb(92, 212, 252)" />
+          <circle cx="230" cy="40" r="5" fill="rgb(92, 212, 252)" />
+          <circle cx="260" cy="40" r="5" fill="rgb(92, 212, 252)" />
+          <circle cx="290" cy="40" r="5" fill="rgb(92, 212, 252)" />
+          <circle cx="320" cy="40" r="5" fill="rgb(92, 212, 252)" />
+          <circle cx="350" cy="40" r="5" fill="rgb(92, 212, 252)" />
+          <circle cx="380" cy="40" r="5" fill="rgb(92, 212, 252)" />
+          <circle cx="410" cy="40" r="5" fill="rgb(92, 212, 252)" />
+          <circle cx="440" cy="40" r="5" fill="rgb(92, 212, 252)" />
+        </svg>
+      </div>
+      <h2 class="proj_zon">Project - <span>Zon</span></h2>
+      <h3 class="proj_zon_date"><span>Year </span>- 2023</h3>
+      <div class="zon">
+        <img src="images/zon1.PNG" alt="" class="zon_img" />
+        <img src="images/zon2.PNG" alt="" class="zon2_img" />
+      </div>
+
+      <svg
+        viewBox="0 0 250 10"
+        width="210"
+        height="70"
+        style="
+          overflow-x: hidden;
+          position: absolute;
+          margin-top: -15%;
+          left: 15%;
+        "
+        transform="rotate(270)"
+      >
+        <path
+          d="M10 10l20 20v-15h460v-10H30v-15z"
+          fill="rgb(92, 212, 252)"
+          stroke="rgb(92, 212, 252)"
+          stroke-width="5"
+        />
+      </svg>
+
+      <div class="dot2">
+        <svg width="450" height="50">
+          <circle cx="110" cy="40" r="5" fill="rgb(92, 212, 252)" />
+          <circle cx="140" cy="40" r="5" fill="rgb(92, 212, 252)" />
+          <circle cx="170" cy="40" r="5" fill="rgb(92, 212, 252)" />
+        </svg>
+        <svg width="450" height="50">
+          <circle cx="110" cy="40" r="5" fill="rgb(92, 212, 252)" />
+          <circle cx="140" cy="40" r="5" fill="rgb(92, 212, 252)" />
+          <circle cx="170" cy="40" r="5" fill="rgb(92, 212, 252)" />
+        </svg>
+        <svg width="450" height="50">
+          <circle cx="110" cy="40" r="5" fill="rgb(92, 212, 252)" />
+          <circle cx="140" cy="40" r="5" fill="rgb(92, 212, 252)" />
+          <circle cx="170" cy="40" r="5" fill="rgb(92, 212, 252)" />
+        </svg>
+        <svg width="450" height="50">
+          <circle cx="110" cy="40" r="5" fill="rgb(92, 212, 252)" />
+          <circle cx="140" cy="40" r="5" fill="rgb(92, 212, 252)" />
+          <circle cx="170" cy="40" r="5" fill="rgb(92, 212, 252)" />
+        </svg>
+        <svg width="450" height="50">
+          <circle cx="110" cy="40" r="5" fill="rgb(92, 212, 252)" />
+          <circle cx="140" cy="40" r="5" fill="rgb(92, 212, 252)" />
+          <circle cx="170" cy="40" r="5" fill="rgb(92, 212, 252)" />
+        </svg>
+        <svg width="450" height="50">
+          <circle cx="110" cy="40" r="5" fill="rgb(92, 212, 252)" />
+          <circle cx="140" cy="40" r="5" fill="rgb(92, 212, 252)" />
+          <circle cx="170" cy="40" r="5" fill="rgb(92, 212, 252)" />
+        </svg>
+        <svg width="450" height="50">
+          <circle cx="110" cy="40" r="5" fill="rgb(92, 212, 252)" />
+          <circle cx="140" cy="40" r="5" fill="rgb(92, 212, 252)" />
+          <circle cx="170" cy="40" r="5" fill="rgb(92, 212, 252)" />
+        </svg>
+      </div>
+
+      <div class="tin_name">
+        <h2 class="tin">
+          Project -,<span style="color: rgb(92, 212, 252)"> Tindog</span>
+        </h2>
+        <h3 class="tin2">
+          <span style="color: rgb(92, 212, 252)">Year</span> - 2022
+        </h3>
+      </div>
+
+      <div class="tim">
+        <img src="images/tim1.PNG" alt="" class="tim1" />
+        <img src="images/tim3.PNG" alt="" class="tim3" />
+        <img src="images/tim2.PNG" alt="" class="tim2" />
+      </div>
+    </div>
   </body>
 </html>
