--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@
       <a href="#home">Home</a>
       <a href="#about">About</a>
       <a href="#project">Project</a>
-      <a href="#blogs">Blogs</a>
+      <a href="#blog">Blogs</a>
     </nav>
   </footer>
   <div
